test_suite/tests/errors/machine_attr_no_banish.rs
use banish::banish;

#[banish::machine]
fn main() {
    
}